@@ -1,3 +1,4 @@
+	* support a separate option to use proxies for peers or not
 	* pausing the session now also pauses checking torrents
 	* moved alert queue size limit into session_settings
 	* added support for DHT rss feeds (storing only)
